--- a/Gent/Gent/New UI/Base.lproj/Main_NewDesign.storyboard
+++ b/Gent/Gent/New UI/Base.lproj/Main_NewDesign.storyboard
@@ -337,7 +337,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view hidden="YES" tag="1" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Q6y-Ab-psI" userLabel="View1">
-                                <rect key="frame" x="8" y="70" width="398" height="609"/>
+                                <rect key="frame" x="8" y="114" width="398" height="565"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="6" translatesAutoresizingMaskIntoConstraints="NO" id="0J3-gh-FrC">
                                         <rect key="frame" x="0.0" y="8" width="398" height="200"/>
@@ -349,7 +349,7 @@
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="MVP repair credit: $xxx" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2V5-LA-dZ8">
-                                                <rect key="frame" x="0.0" y="34.333333333333329" width="398" height="28.333333333333329"/>
+                                                <rect key="frame" x="0.0" y="34.333333333333343" width="398" height="28.333333333333329"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="22"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
@@ -367,13 +367,13 @@
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="xx/xx" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gKa-aK-uc3">
-                                                <rect key="frame" x="0.0" y="137.33333333333334" width="398" height="28.333333333333343"/>
+                                                <rect key="frame" x="0.0" y="137.33333333333331" width="398" height="28.333333333333343"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="22"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <button opaque="NO" tag="1000" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="k6t-gm-usf">
-                                                <rect key="frame" x="0.0" y="171.66666666666666" width="398" height="28.333333333333343"/>
+                                                <rect key="frame" x="0.0" y="171.66666666666669" width="398" height="28.333333333333343"/>
                                                 <state key="normal">
                                                     <attributedString key="attributedTitle">
                                                         <fragment content="Edit">
@@ -393,7 +393,7 @@
                                         </constraints>
                                     </stackView>
                                     <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="L4a-mL-K0Y" userLabel="Payments Table View">
-                                        <rect key="frame" x="0.0" y="216" width="398" height="385"/>
+                                        <rect key="frame" x="0.0" y="216" width="398" height="341"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <label key="tableHeaderView" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Payments" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="afP-iB-j9g">
                                             <rect key="frame" x="0.0" y="0.0" width="398" height="52.333333333333314"/>
@@ -438,25 +438,25 @@
                                 </constraints>
                             </view>
                             <view hidden="YES" tag="2" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="x6n-b0-dTf" userLabel="View2">
-                                <rect key="frame" x="8" y="72" width="398" height="607"/>
+                                <rect key="frame" x="8" y="116" width="398" height="563"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="b02-x9-Krs">
-                                        <rect key="frame" x="0.0" y="0.0" width="398" height="607"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="398" height="563"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalCompressionResistancePriority="751" verticalCompressionResistancePriority="1000" text="Sign up to MVP for better iPhone 8 Plus prices" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9ql-nZ-4eb">
-                                                <rect key="frame" x="0.0" y="0.0" width="398" height="144.66666666666666"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="398" height="88"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalCompressionResistancePriority="751" verticalCompressionResistancePriority="1000" text="Save 11% on repairs, and get an extra 22% when you trade in your phone" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="5" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="hF0-Wg-3jA">
-                                                <rect key="frame" x="0.0" y="164.66666666666666" width="398" height="262.33333333333337"/>
+                                                <rect key="frame" x="0.0" y="108" width="398" height="275"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WAk-Wx-dIk">
-                                                <rect key="frame" x="0.0" y="447" width="398" height="70"/>
+                                                <rect key="frame" x="0.0" y="403" width="398" height="70"/>
                                                 <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="70" id="PLi-o0-mvW"/>
@@ -467,7 +467,7 @@
                                                 </state>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dQ1-eG-0k6">
-                                                <rect key="frame" x="0.0" y="537" width="398" height="70"/>
+                                                <rect key="frame" x="0.0" y="493" width="398" height="70"/>
                                                 <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="70" id="JQt-qU-ISD"/>
@@ -502,11 +502,13 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="FT1-Qc-YPd"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="MVP" id="sCi-3E-Z8w"/>
+                    <navigationItem key="navigationItem" title="[ MobileGent ]" id="UJE-DT-a7v">
+                        <barButtonItem key="rightBarButtonItem" title="Signout" id="KLh-Cr-d0L"/>
+                    </navigationItem>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="DAo-s8-WnF" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3550.7246376811595" y="390.48913043478262"/>
+            <point key="canvasLocation" x="4567" y="390"/>
         </scene>
         <!--News-->
         <scene sceneID="Uai-9q-uot">
@@ -517,7 +519,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="singleLineEtched" allowsSelection="NO" rowHeight="150" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="dUs-5a-20p" userLabel="News Table">
-                                <rect key="frame" x="0.0" y="64" width="414" height="623"/>
+                                <rect key="frame" x="0.0" y="108" width="414" height="579"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <view key="tableHeaderView" contentMode="scaleToFill" id="4qg-kN-QJR" userLabel="Header View">
                                     <rect key="frame" x="0.0" y="0.0" width="414" height="45"/>
@@ -602,27 +604,29 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="NJa-En-A1A"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="News" id="0zf-dM-dhx"/>
+                    <navigationItem key="navigationItem" title="[ MobileGent ]" id="ebo-Ek-sYw">
+                        <barButtonItem key="rightBarButtonItem" title="Signout" id="4yn-LC-gH4"/>
+                    </navigationItem>
                     <connections>
                         <outlet property="table" destination="dUs-5a-20p" id="bU1-6e-uTI"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="RlA-g8-Pvx" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3552" y="-267"/>
+            <point key="canvasLocation" x="4568" y="-267"/>
         </scene>
         <!--[ MobileGent ]-->
         <scene sceneID="DSR-uG-2ox">
             <objects>
-                <tabBarController title="[ MobileGent ]" id="PWa-KC-1Hf" sceneMemberID="viewController">
+                <tabBarController storyboardIdentifier="tabsController" title="[ MobileGent ]" id="PWa-KC-1Hf" sceneMemberID="viewController">
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="u8a-BF-Mdx">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="49"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
                     <connections>
-                        <segue destination="mWm-rH-bde" kind="relationship" relationship="viewControllers" id="wU2-Zc-TFR"/>
-                        <segue destination="tYQ-YW-ZVJ" kind="relationship" relationship="viewControllers" id="v67-O8-ExC"/>
+                        <segue destination="aI6-gv-ovM" kind="relationship" relationship="viewControllers" id="wU2-Zc-TFR"/>
+                        <segue destination="Xp4-hL-pAA" kind="relationship" relationship="viewControllers" id="v67-O8-ExC"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="s67-7T-NXs" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -675,7 +679,6 @@
                                         </state>
                                         <connections>
                                             <action selector="doLogin" destination="CWF-rJ-AFt" eventType="touchUpInside" id="zcE-YB-t72"/>
-                                            <segue destination="PWa-KC-1Hf" kind="show" identifier="signin" id="aa9-ts-AmV"/>
                                         </connections>
                                     </button>
                                 </subviews>
@@ -724,8 +727,54 @@
             </objects>
             <point key="canvasLocation" x="-255" y="64"/>
         </scene>
+        <!--News-->
+        <scene sceneID="W1c-Ux-mvO">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="aI6-gv-ovM" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="News" id="0zf-dM-dhx"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="vLc-S7-8C5">
+                        <rect key="frame" x="0.0" y="20" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="barTintColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <textAttributes key="titleTextAttributes">
+                            <fontDescription key="fontDescription" type="boldSystem" pointSize="30"/>
+                        </textAttributes>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="mWm-rH-bde" kind="relationship" relationship="rootViewController" id="P9C-mu-9FY"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ocx-UU-hno" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3550.7246376811595" y="-267.39130434782612"/>
+        </scene>
+        <!--MVP-->
+        <scene sceneID="fIr-3J-kMM">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Xp4-hL-pAA" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="MVP" id="sCi-3E-Z8w"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="Ruj-Q5-GzB">
+                        <rect key="frame" x="0.0" y="20" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="barTintColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <textAttributes key="titleTextAttributes">
+                            <fontDescription key="fontDescription" type="boldSystem" pointSize="30"/>
+                        </textAttributes>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="tYQ-YW-ZVJ" kind="relationship" relationship="rootViewController" id="E2Z-5j-ueM"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="8VU-EY-Yde" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3550.7246376811595" y="390.48913043478262"/>
+        </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="aa9-ts-AmV"/>
+        <segue reference="A6o-8d-qtq"/>
     </inferredMetricsTieBreakers>
 </document>
